caas-app/src/main/resources/public/css/server.css
.server_results {
    padding-top: 20px;
    padding-bottom: 20px;
}

#server_run {
    padding: 30px;
}

#additional_server {
    margin: 50px auto;
    display: inline-flex;
    justify-content: space-between;
}

#form_subscribe > div {
    margin: 5px;
    padding: 5px;
}

.input_subscribe {
    width: 250px;
}

#help_container {
    display: flex;
    justify-content: center;
    align-items: center;
    visibility: hidden;
    position: fixed;
    z-index: 1;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    background-color: rgb(0, 0, 0);
    background-color: rgba(0, 0, 0, 0.4);
}

.help.card {
    overflow: auto;
    display: none;
    text-align: left;
}

.close {
    text-decoration: none !important;
    color: #f44;
    float: right;
    font-size: 40px;
    font-weight: bold;
    cursor: pointer;
}

@media only screen and (max-width: 850px) {
    #additional_server {
        display: block;
    }
}

